--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="DSC05052.jpg" alt="" /></span>
-							<h1>Jane Doe</h1>
-							<p>Senior Psychonautics Engineer</p>
+							<h1>Mohamed Garbouj </h1>
+							<p>Digital Marketing</p>
 						</header>
 						<!--
 						<hr />
@@ -71,11 +71,7 @@
 					</section>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<ul class="copyright">
-							<li>&copy; Jane Doe</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
+					
 
 			</div>
 
