--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="DSC05052.jpg" alt="" /></span>
+							
 							<h1>Mohamed Garbouj </h1>
 							<p>Digital Marketing</p>
+							<span class="avatar"><img src="capture.jpg" alt="" /></span>
 						</header>
 						<!--
 						<hr />
