--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							
 							<h1>Mohamed Garbouj </h1>
 							<p>Digital Marketing</p>
-							<span class="avatar"><img src="capture.jpg" alt="" /></span>
+							<span class="avatar"><img src="Capture.PNG" alt="" /></span>
 						</header>
 						<!--
 						<hr />
